--- a/model/model-client/pom.xml
+++ b/model/model-client/pom.xml
@@ -26,7 +26,11 @@
         <groupId>com.evolveum.midpoint</groupId>
         <version>2.3-SNAPSHOT</version>
     </parent>
-
+    <scm>
+        <connection>https://github.com/Evolveum/midpoint.git</connection>
+        <developerConnection>git@github.com:Evolveum/midpoint.git</developerConnection>
+        <url>https://fisheye.evolveum.com/browse/midPoint</url>
+    </scm>
     <distributionManagement>
       <repository>
         <id>evolveum-nexus</id>
