--- a/model/workflow-api/pom.xml
+++ b/model/workflow-api/pom.xml
@@ -28,7 +28,11 @@
 
     <groupId>com.evolveum.midpoint.model</groupId>
     <artifactId>workflow-api</artifactId>
-
+    <scm>
+        <connection>https://github.com/Evolveum/midpoint.git</connection>
+        <developerConnection>git@github.com:Evolveum/midpoint.git</developerConnection>
+        <url>https://fisheye.evolveum.com/browse/midPoint</url>
+    </scm>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
