--- a/provisioning/provisioning-impl/pom.xml
+++ b/provisioning/provisioning-impl/pom.xml
@@ -26,6 +26,11 @@
 		<groupId>com.evolveum.midpoint</groupId>
 		<version>2.3-SNAPSHOT</version>
 	</parent>
+    <scm>
+        <connection>https://github.com/Evolveum/midpoint.git</connection>
+        <developerConnection>git@github.com:Evolveum/midpoint.git</developerConnection>
+        <url>https://fisheye.evolveum.com/browse/midPoint</url>
+    </scm>
 	<repositories>
         	<repository>
 			<!-- We need this for scannotation -->
@@ -220,6 +225,7 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>aspectj-maven-plugin</artifactId>
+                        <version>1.6</version>
 						<configuration>
 							<aspectLibraries>
 								<aspectLibrary>
