--- a/testing/consistency-mechanism/pom.xml
+++ b/testing/consistency-mechanism/pom.xml
@@ -25,6 +25,11 @@
 		<version>2.3-SNAPSHOT</version>
 		<relativePath>../../build-system/pom.xml</relativePath>
 	</parent>
+    <scm>
+        <connection>https://github.com/Evolveum/midpoint.git</connection>
+        <developerConnection>git@github.com:Evolveum/midpoint.git</developerConnection>
+        <url>https://fisheye.evolveum.com/browse/midPoint</url>
+    </scm>
 	<organization>
 		<name>Evolveum</name>
 		<url>http://www.evolveum.com</url>
