--- a/testing/rest/pom.xml
+++ b/testing/rest/pom.xml
@@ -17,7 +17,11 @@
   	<system>Atlassian JIRA</system>
   	<url>http://jira.evolveum.com/</url>
   </issueManagement>
-  
+    <scm>
+        <connection>https://github.com/Evolveum/midpoint.git</connection>
+        <developerConnection>git@github.com:Evolveum/midpoint.git</developerConnection>
+        <url>https://fisheye.evolveum.com/browse/midPoint</url>
+    </scm>
   <dependencies>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
