test code cleanup, perf. tests improvements.

--- a/repo/repo-sql-impl-test/sample-configurations/mysql.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/mysql.properties
@@ -20,4 +20,5 @@ hibernateHbm2ddl=update
 hibernateDialect=com.evolveum.midpoint.repo.sql.util.MidPointMySQLDialect
 jdbcUsername=midpoint
 jdbcPassword=qwe123
-jdbcUrl=jdbc:mysql://localhost:3306/testing?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&clobCharacterEncoding=UTF-8
+jdbcUrl=jdbc:mysql://localhost:3306/midpoint?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&clobCharacterEncoding=UTF-8
+useZip=true
