--- a/infra/prism/src/test/resources/common/yaml/user-jack.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack.yaml
@@ -55,8 +55,7 @@ user:
     object:
       oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1113"
       name: "jsparrow"
-  - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1111"
-    type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
+  - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1111"       # deliberately without specifying the type, as it should be taken from the definition
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1112"
     type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
     description: "This is a reference with a filter"
