--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -92,6 +92,7 @@ PageAdmin.menu.top.resources.new=New Resource
 PageAdmin.menu.top.resources.wizard=Resource wizard
 PageAdmin.menu.top.workItems=Work items
 PageAdmin.menu.top.workItems.list=My work items
+PageAdmin.menu.top.workItems.listClaimable=Work items claimable by me
 PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
 PageAdmin.menu.top.workItems.listProcessInstancesRequestedBy=My requests
 PageAdmin.menu.top.workItems.listProcessInstancesRequestedFor=Requests about me
