--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
@@ -32,6 +32,8 @@ pageWorkItem.trackingData.description=Tracking (diagnostic) data
 pageWorkItem.requestCommon.description=General information about the request
 pageWorkItem.requestSpecific.description=Your decision
 pageWorkItem.delta=Delta to be approved
+pageWorkItem.button.claim=Claim
+pageWorkItem.button.release=Release
 pageWorkItem.button.approve=Approve
 pageWorkItem.button.reject=Reject
 pageWorkItem.button.cancel=Back
@@ -43,6 +45,8 @@ pageWorkItem.title=Work to do:
 pageWorkItem.requestedBy=Requested by:
 pageWorkItem.requestedOn=Requested on:
 pageWorkItem.workItemCreatedOn=This work item created on:
+pageWorkItem.assignee=Assigned to:
+pageWorkItem.candidates=Candidate assignees:
 
 pageWorkItem.label.showTechnicalInformation=Show technical information
 
