Workflows: showing approver/assignee/candidate names instead of pure OIDs.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -28,5 +28,5 @@ PageBase.button.delete=Delete
 PageBase.clearCssCache=Clear less/js cache
 
 WorkItemsPanel.name=Name
-WorkItemsPanel.assigned=Assigned to
+WorkItemsPanel.assigned=Assignee or candidate
 WorkItemsPanel.created=Created
