Correctly displaying situation when workflow shadowing task no longer exists.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/ProcessInstancePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/ProcessInstancePanel.properties
@@ -24,4 +24,4 @@ processInstancePanel.tasks=Currently active work items:
 processInstancePanel.details=Other information:
 processInstancePanel.message.noTasks=none
 processInstancePanel.message.cantGetDetails=Couldn't get process instance details.
-processInstancePanel.taskMightBeRemoved=(might be cleaned-up already)
+processInstancePanel.taskAlreadyRemoved=(was already removed)
