--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -48,8 +48,8 @@
         <cxf.version>2.7.6</cxf.version>
         <cxf-xjc.version>2.4.0</cxf-xjc.version>
         <dbunit.version>2.4.7</dbunit.version>
-        <jaxb.version>2.2.3</jaxb.version>
-        <jaxb-xjc.version>2.2.4-1</jaxb-xjc.version>
+        <jaxb.version>2.2.7</jaxb.version>
+        <jaxb-xjc.version>2.2.7</jaxb-xjc.version>
         <junit.version>4.8.2</junit.version>
         <opendj.version>2.4.3</opendj.version>
         <mockito.version>1.8.5</mockito.version>
