MID-1706: Showing status "Suspending" for tasks being suspended. Fixed displaying of transient task attributes (execution status, next scheduled run time) on task details page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -132,13 +132,14 @@ TaskDtoExecutionStatus.RUNNABLE=Runnable
 TaskDtoExecutionStatus.RUNNING_OR_RUNNABLE=Running/Runnable
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatus.SUSPENDED=Suspended
+TaskDtoExecutionStatus.SUSPENDING=Suspending
 TaskDtoExecutionStatus.CLOSED=Closed
 TaskDtoExecutionStatus.CLOSED.withTimestamp=Closed at ${}
 
 TaskDtoExecutionStatusFilter.ALL=All execution states
 TaskDtoExecutionStatusFilter.RUNNING_OR_RUNNABLE=Runnable or running
 TaskDtoExecutionStatusFilter.WAITING=Waiting
-TaskDtoExecutionStatusFilter.SUSPENDED=Suspended
+TaskDtoExecutionStatusFilter.SUSPENDED_OR_SUSPENDING=Suspended or suspending
 TaskDtoExecutionStatusFilter.CLOSED=Closed
 TaskDtoExecutionStatusFilter.NOT_CLOSED=Not closed
 
