updated localization files

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/input/UploadPanel_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/input/UploadPanel_en_US.utf8.properties
@@ -1,4 +1,8 @@
-#Wed Feb 12 15:42:49 CET 2014
+#Mon May 12 18:18:36 CEST 2014
 UploadPanel.delete.tooltip=Remove Photo
 UploadPanel.message.help=Choose Xml file for import.
+UploadPanel.message.removeError=File was not removed.
+UploadPanel.message.removeSuccess=File was removed.
+UploadPanel.message.uploadError=File upload failed. Try again please.
+UploadPanel.message.uploadSuccess=File upload was successful. Continue with editing and press 'Save' when done.
 UploadPanel.upload.tooltip=Upload Photo
