--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_en_US.utf8.properties
@@ -1,5 +1,8 @@
-#Fri Jan 10 12:26:48 CET 2014
+#Mon May 12 18:18:36 CEST 2014
+PageReports.button.configure=Configure
+PageReports.button.run=Run
 PageReports.message.jasperError=Error occurred during creating Jasper report.
+PageReports.message.queryError=Error occurred during translation search query to filter.
 PageReports.message.resourceNotDefined=Resource not defined.
 PageReports.message.unknownReport=Unknown report.
 PageReports.report.auditDescription=Report made from audit records.
@@ -8,9 +11,12 @@ PageReports.report.reconciliationDescription=Reconciliation report for selected 
 PageReports.report.reconciliationName=Reconciliation
 PageReports.report.usersDescription=Users listed in MidPoint.
 PageReports.report.usersName=Users in MidPoint
+PageReports.search.showSubreports=Show subreports
 PageReports.table.description=Description
 PageReports.table.name=Name
 PageReports.title.auditPopup=Audit report parameters
 PageReports.title.reconciliationPopup=Reconciliation report parameters
+PageReports.title.userPopup=User report parameters
 page.subTitle=from midPoint
 page.title=Reports
+searchForm.searchTextPlaceholder=Text
