--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_en_US.utf8.properties
@@ -1,9 +1,13 @@
-#Sat Oct 12 17:23:53 CEST 2013
-page.subTitle=something clever
-page.title=New role
-pageRole.button.back=Back
-pageRole.button.save=Save
-pageRole.edit=Edit
-pageRole.message.emptyXml=Can't save empty xml as role.
-pageRole.options=Options
-pageRole.title.editing=Role '{0}' details
+#Mon May 12 18:18:36 CEST 2014
+PageRoleEditor.label.description=Description
+PageRoleEditor.label.name=Name
+PageRoleEditor.label.requestable=Requestable
+PageRoleEditor.label.type=Type
+PageRoleEditor.subtitle.activation=Activation
+PageRoleEditor.subtitle.basic=Basic
+PageRoleEditor.subtitle.editingRole=role '{0}'
+PageRoleEditor.subtitle.newRole=new role
+PageRoleEditor.title.assignments=Assignments
+PageRoleEditor.title.editingRole=Edit
+PageRoleEditor.title.inducements=Inducements
+PageRoleEditor.title.newRole=Create
