--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_en_US.utf8.properties
@@ -1,8 +1,11 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon May 12 18:18:36 CEST 2014
+Requestable.ALL=All
+Requestable.NON_REQUESTABLE=Non-Requestable
+Requestable.REQUESTABLE=Requestable
 page.title=List roles
 pageRoles.button.delete=Delete
-pageRoles.description=Description
 pageRoles.dialog.title.confirmDelete=Confirm delete
 pageRoles.message.deleteRoleConfirm=Do you really want to delete selected {0} role(s)?
 pageRoles.message.nothingSelected=No role has been selected.
-pageRoles.name=Name
+pageRoles.message.queryError=Error occurred during translation search query to filter.
+pageRoles.requestable=Requestable
