--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
@@ -1,28 +1,23 @@
-#Sat Oct 12 17:23:53 CEST 2013
-page.title=User
-page.subTitle=details
+#Mon May 12 18:18:36 CEST 2014
 pageUser.accounts=Accounts
 pageUser.assignment.active=Active
 pageUser.assignment.name=Name
 pageUser.assignment.type=Type
 pageUser.assignments=Assignments
 pageUser.button.addAccount=Add account
-pageUser.button.assignAccount=Account
-pageUser.button.assignOrgUnit=Org. unit
-pageUser.button.assignRole=Role
 pageUser.button.back=Back
 pageUser.button.delete=Delete
 pageUser.button.disable=Disable
 pageUser.button.enable=Enable
-pageUser.button.label.assign=Assign
-pageUser.button.label.resources=Resource
-pageUser.button.label.role=Role
 pageUser.button.save=Save
 pageUser.button.submit=Preview changes
-pageUser.button.unassign=Unassign
 pageUser.button.unlink=Unlink
 pageUser.button.unlock=Unlock
 pageUser.description=User in repository
+pageUser.menu.assignAccount=Assign account
+pageUser.menu.assignOrg=Assign org. unit
+pageUser.menu.assignRole=Assign role
+pageUser.menu.unassign=Unassign
 pageUser.message.cantCreateUser=Create user failed
 pageUser.message.cantEditUser=Couldn't load form for editing user.
 pageUser.message.cantNewUser=Couldn't load form for new user.
@@ -43,13 +38,17 @@ pageUser.message.noEnabledPropertyFound=No enabled property found for account '{
 pageUser.message.noPassword=Password is not entered.
 pageUser.message.noResourceSelected=No resource selected.
 pageUser.message.unsupportedState=Unsupported user form state '{0}'.
-pageUser.orgUnits=Organization units [{0}]
+pageUser.subTitle.edituser=user '{0}'
+pageUser.subTitle.newUser=new user
 pageUser.task.category=Category
 pageUser.task.execution=Execution state
 pageUser.task.name=Task name
 pageUser.task.status=Status
 pageUser.tasks=Tasks
 pageUser.title.confirmDelete=Confirm delete
+pageUser.title.editUser=Edit
 pageUser.title.editing={0} details
+pageUser.title.newUser=Create
 pageUser.title.selectAssignable=Select object(s)
 pageUser.title.selectResource=Select resource(s)
+pageUser.userDetails=User details
