--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
@@ -1,24 +1,17 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon May 12 18:18:36 CEST 2014
 SearchType.FAMILY_NAME=Family name
 SearchType.FULL_NAME=Full name
 SearchType.GIVEN_NAME=Given name
 SearchType.NAME=Name
 page.subTitle=in midPoint
 page.title=Users
-pageUsers.name=Name
-pageUsers.givenName=Given name
-pageUsers.familyName=Family name
-pageUsers.fullName=Full name
 pageUsers.accounts=Accounts
-pageUsers.button.searchButton=Search
 pageUsers.dialog.title.confirmDelete=Confirm delete
-pageUsers.email=Email
 pageUsers.menu.delete=Delete
 pageUsers.menu.disable=Disable
 pageUsers.menu.enable=Enable
 pageUsers.menu.reconcile=Reconcile
 pageUsers.message.deleteUserConfirm=Do you really want to delete selected {0} user(s)?
+pageUsers.message.deleteUserConfirmSingle=Do you really want to delete user '{0}'?
 pageUsers.message.nothingSelected=No user has been selected.
 pageUsers.message.queryError=Error occurred during translation search query to filter.
-pageUsers.search=Search text
-pageUsers.searchTextPlaceholder=Text
