--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_sk_SK.utf8.properties
@@ -1,13 +1,11 @@
-#Wed Feb 12 15:40:22 CET 2014
+#Mon May 12 18:18:48 CEST 2014
+Requestable.ALL=All
+Requestable.NON_REQUESTABLE=Non-Requestable
+Requestable.REQUESTABLE=Requestable
 page.title=Zoznam rolí
 pageRoles.button.delete=Zmazať
-pageRoles.button.search=Search
-pageRoles.description=Popis
 pageRoles.dialog.title.confirmDelete=Potvrdenie zmazania
 pageRoles.message.deleteRoleConfirm=Naozaj chcete zmazať {0} vybrané role?
 pageRoles.message.nothingSelected=Nebola vybratá rola.
 pageRoles.message.queryError=Error occurred during translation search query to filter.
-pageRoles.name=Meno
-pageRoles.nonRequestable=Non Requestable
 pageRoles.requestable=Requestable
-pageRoles.requestableAll=All
