--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Mon May 12 18:18:48 CEST 2014
 SearchType.FAMILY_NAME=Family name
 SearchType.FULL_NAME=Full name
 SearchType.GIVEN_NAME=Given name
@@ -6,19 +6,12 @@ SearchType.NAME=Name
 page.subTitle=in midPoint
 page.title=Používatelia v databáze
 pageUsers.accounts=Accounts
-pageUsers.button.searchButton=Hľadať
 pageUsers.dialog.title.confirmDelete=Potvrdenie zmazania
-pageUsers.email=Email
-pageUsers.familyName=Priezvisko
-pageUsers.fullName=Celé meno
-pageUsers.givenName=Krstné meno
 pageUsers.menu.delete=Delete
 pageUsers.menu.disable=Disable
 pageUsers.menu.enable=Enable
 pageUsers.menu.reconcile=Reconcile
 pageUsers.message.deleteUserConfirm=Naozaj chcete vymazať {0} vybraných používateľ/ov?
+pageUsers.message.deleteUserConfirmSingle=Do you really want to delete user '{0}'?
 pageUsers.message.nothingSelected=Nebol vybraný žiaden používateľ.
 pageUsers.message.queryError=Nastala chyba pri preklade dopytu pre vyhľadávanie.
-pageUsers.name=Meno
-pageUsers.search=Hľadať text
-pageUsers.searchTextPlaceholder=Text
