--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/ProcessInstancePanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/ProcessInstancePanel_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon May 12 18:18:48 CEST 2014
 processInstancePanel.details=Other information\:
 processInstancePanel.finished=Finished\:
 processInstancePanel.message.cantGetDetails=Couldn't get process instance details.
@@ -7,6 +7,6 @@ processInstancePanel.name=Process instance name\:
 processInstancePanel.pid=Instance ID\:
 processInstancePanel.started=Started\:
 processInstancePanel.task=MidPoint task\:
-processInstancePanel.taskMightBeRemoved=(might be cleaned-up already)
+processInstancePanel.taskAlreadyRemoved=(was already removed)
 processInstancePanel.tasks=Currently active work items\:
 processInstancePanel.title.edit=Details for '{0}'
