--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Wed Feb 12 15:40:22 CET 2014
+#Mon May 12 18:18:48 CEST 2014
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -73,6 +73,11 @@ NodeExecutionStatus.DOWN=Turned off
 NodeExecutionStatus.ERROR=Error
 NodeExecutionStatus.PAUSED=Stopped
 NodeExecutionStatus.RUNNING=Running
+NodeExecutionStatusType.COMMUNICATION_ERROR=Unreachable
+NodeExecutionStatusType.DOWN=Turned off
+NodeExecutionStatusType.ERROR=Error
+NodeExecutionStatusType.PAUSED=Stopped
+NodeExecutionStatusType.RUNNING=Running
 ObjectType.description=Description
 ObjectType.name=Name
 ObjectType.parentOrgRef=Parent org. units
@@ -90,6 +95,7 @@ ObjectTypeGuiDescriptor.report=Report
 ObjectTypeGuiDescriptor.reportOutput=Report output
 ObjectTypeGuiDescriptor.resource=Resource
 ObjectTypeGuiDescriptor.role=Role
+ObjectTypeGuiDescriptor.securityPolicy=Security policy
 ObjectTypeGuiDescriptor.shadow=Shadow
 ObjectTypeGuiDescriptor.systemConfiguration=System configuration
 ObjectTypeGuiDescriptor.task=Task
@@ -144,12 +150,13 @@ TaskDtoExecutionStatus.RUNNABLE=Runnable
 TaskDtoExecutionStatus.RUNNING=Running
 TaskDtoExecutionStatus.RUNNING_OR_RUNNABLE=Running/Runnable
 TaskDtoExecutionStatus.SUSPENDED=Suspended
+TaskDtoExecutionStatus.SUSPENDING=Suspending
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatusFilter.ALL=All execution states
 TaskDtoExecutionStatusFilter.CLOSED=Closed
 TaskDtoExecutionStatusFilter.NOT_CLOSED=Not closed
 TaskDtoExecutionStatusFilter.RUNNING_OR_RUNNABLE=Runnable or running
-TaskDtoExecutionStatusFilter.SUSPENDED=Suspended
+TaskDtoExecutionStatusFilter.SUSPENDED_OR_SUSPENDING=Suspended or suspending
 TaskDtoExecutionStatusFilter.WAITING=Waiting
 TaskExecutionStatus.CLOSED=Closed
 TaskExecutionStatus.RUNNABLE=Runnable
@@ -159,6 +166,7 @@ ThreadStopActionType.CLOSE=Close
 ThreadStopActionType.RESCHEDULE=Reschedule
 ThreadStopActionType.RESTART=Restart
 ThreadStopActionType.SUSPEND=Suspend
+UserType.emailAddress=Email
 UserType.familyName=Family name
 UserType.fullName=Full name
 UserType.givenName=Given name
@@ -316,9 +324,9 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageDebugView.loadO
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageDebugView.saveObject=Save object (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.importFile=Import file (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.importXml=Import xml (Gui)
+operation.com.evolveum.midpoint.web.page.admin.configuration.PageInternals.changeTime=Change time (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.loadLoggingConfiguration=Load logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateLoggingConfiguration=Update logging configuration (Gui)
-operation.com.evolveum.midpoint.web.page.admin.configuration.PageTimeTest.changeTime=Change time (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Test repository (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAccounts=Load accounts (Gui)
@@ -383,6 +391,8 @@ operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.de
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObjects=Delete objects (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObject=Move object (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObjects=Move objects (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.updateObject=Update object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.updateObjects=Update objects (Gui)
 operation.com.evolveum.midpoint.web.page.admin.workflow.PageWorkItem.saveWorkItem=Save work item (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.deleteObject=Delete object (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.loadObject=Load object (Gui)
