--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
@@ -1,9 +1,13 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon May 12 18:18:36 CEST 2014
 PageBase.button.back=Back
 PageBase.button.cancel=Cancel
 PageBase.button.delete=Delete
 PageBase.button.run=Run
 PageBase.button.save=Save
+PageBase.button.saveAndRun=Save & Run
+PageBase.button.search=Search
+PageBase.button.update=Update
+PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
