--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Fri Jan 10 12:26:48 CET 2014
+#Mon May 12 18:18:36 CEST 2014
 ExportType.CSV=CSV
 ExportType.DOCX=DOCX
 ExportType.HTML=HTML
@@ -13,13 +13,36 @@ ExportType.XLS=XLS
 ExportType.XLSX=XLSX
 ExportType.XML=XML
 ExportType.XML_EMBED=XML_EMBED
-filterForm.filetype.null=Select file type
+SearchType.AUTHOR=Author
+SearchType.DESCRIPTION=Description
+SearchType.NAME=Name
+Type.AUDIT=Audit
+Type.RECONCILIATION=Reconciliation
+Type.USERS=User
 page.subTitle=in past
 page.title=Created Reports
+pageCreatedReports.button.delete=Delete
+pageCreatedReports.button.download=Download
+pageCreatedReports.button.searchButton=Search
+pageCreatedReports.dialog.title.confirmDelete=Confirm Delete
 pageCreatedReports.filter.default=Choose File Type
 pageCreatedReports.filter.filetype=File Type
+pageCreatedReports.filter.reportType=Report Type
+pageCreatedReports.inlineMenu.deleteAll=Delete All
+pageCreatedReports.inlineMenu.deleteSelected=Delete Selected
+pageCreatedReports.message.deleteAll=Do you really want to delete all created report outputs?
+pageCreatedReports.message.deleteOutputConfirmed=Do you really want to delete selected {0} Created report(s)?
+pageCreatedReports.message.deleteOutputSingle=Do you really want to delete Created report '{0}'?
+pageCreatedReports.message.downloadError=Could not download Report.
+pageCreatedReports.message.fileNotFound=File with report was not found.
+pageCreatedReports.message.nothingSelected=No reports have been selected.
+pageCreatedReports.message.queryError=Error occurred during translation search query to filter.
 pageCreatedReports.table.author=Author
 pageCreatedReports.table.description=Description
 pageCreatedReports.table.filetype=File Type
 pageCreatedReports.table.name=Name
 pageCreatedReports.table.time=Time
+pageCreatedReports.table.type=Report Type
+searchForm.filetype.null=File Type
+searchForm.reportType.null=Report Type
+searchForm.searchTextPlaceholder=Text
