--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -1,9 +1,12 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Mon May 12 18:18:48 CEST 2014
 PageBase.button.back=Back
 PageBase.button.cancel=Cancel
 PageBase.button.delete=Delete
 PageBase.button.run=Run
 PageBase.button.save=Save
+PageBase.button.saveAndRun=Save & Run
+PageBase.button.search=Search
+PageBase.button.update=Update
 PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
