--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Fri Jan 10 12:27:06 CET 2014
+#Mon May 12 18:18:48 CEST 2014
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.about=About
 PageAdmin.menu.top.configuration.basic=Basic
@@ -7,11 +7,11 @@ PageAdmin.menu.top.configuration.configuration=Configuration
 PageAdmin.menu.top.configuration.development=Development
 PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
 PageAdmin.menu.top.configuration.importObject=Import object
+PageAdmin.menu.top.configuration.internals=Internals configuration
 PageAdmin.menu.top.configuration.logging=Logging
 PageAdmin.menu.top.configuration.repositoryObjects=Repository objects
 PageAdmin.menu.top.configuration.security=Security
 PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
-PageAdmin.menu.top.configuration.timeTest=Time test
 PageAdmin.menu.top.home=Home
 PageAdmin.menu.top.reports=Reports
 PageAdmin.menu.top.reports.created=Created reports
@@ -19,6 +19,7 @@ PageAdmin.menu.top.reports.list=List reports
 PageAdmin.menu.top.resources=Resources
 PageAdmin.menu.top.resources.list=List resources
 PageAdmin.menu.top.resources.new=New Resource
+PageAdmin.menu.top.resources.wizard=Resource wizard
 PageAdmin.menu.top.roles=Roles
 PageAdmin.menu.top.roles.list=List roles
 PageAdmin.menu.top.roles.new=New role
@@ -34,6 +35,7 @@ PageAdmin.menu.top.users.org.new=New organization
 PageAdmin.menu.top.users.org.tree=Organization tree
 PageAdmin.menu.top.workItems=Work items
 PageAdmin.menu.top.workItems.list=My work items
+PageAdmin.menu.top.workItems.listClaimable=Work items claimable by me
 PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
 PageAdmin.menu.top.workItems.listProcessInstancesRequestedBy=My requests
 PageAdmin.menu.top.workItems.listProcessInstancesRequestedFor=Requests about me
