--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_sk_SK.utf8.properties
@@ -1,9 +1,13 @@
-#Mon Dec 09 19:46:55 CET 2013
-page.subTitle=something clever
-page.title=Nová rola
-pageRole.button.back=Späť
-pageRole.button.save=Uložiť
-pageRole.edit=Upraviť
-pageRole.message.emptyXml=Nie je možné uložiť prázne xml ako rolu.
-pageRole.options=Options
-pageRole.title.editing=Detaily role '{0}'
+#Mon May 12 18:18:48 CEST 2014
+PageRoleEditor.label.description=Description
+PageRoleEditor.label.name=Name
+PageRoleEditor.label.requestable=Requestable
+PageRoleEditor.label.type=Type
+PageRoleEditor.subtitle.activation=Activation
+PageRoleEditor.subtitle.basic=Basic
+PageRoleEditor.subtitle.editingRole=role '{0}'
+PageRoleEditor.subtitle.newRole=new role
+PageRoleEditor.title.assignments=Assignments
+PageRoleEditor.title.editingRole=Edit
+PageRoleEditor.title.inducements=Inducements
+PageRoleEditor.title.newRole=Create
