--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser_sk_SK.utf8.properties
@@ -1,5 +1,6 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Mon May 12 18:18:48 CEST 2014
 OrgUnitBrowser.cancel=Cancel
 OrgUnitBrowser.createRoot=Make it root
+OrgUnitBrowser.message.queryError=Error occurred during translation search query to filter.
 OrgUnitBrowser.search=Search
 OrgUnitBrowser.title=Choose new org. unit parent
