account triggers shown on user details. MID-1691

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.properties
@@ -16,3 +16,5 @@
 
 CheckTableHeader.label.error=Error
 CheckTableHeader.showMore=Show more
+CheckTableHeader.triggerPlanned=Trigger planned on {0}.
+CheckTableHeader.triggerUnknownTime=Trigger without time planned.
