minor localization fix for sk_SK.

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
@@ -1,6 +1,6 @@
 #Sat Jan 04 14:25:43 CET 2014
 page.subTitle=on {0}
-page.title={0}
+page.title=Accounts
 pageContentAccounts.button.searchButton=Search
 pageContentAccounts.identifiers=Identifiers
 pageContentAccounts.menu.changeOwner=Change owner
