--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -33,4 +33,5 @@ SystemConfigPanel.mail.username=Username
 SystemConfigPanel.mail.password=Password
 SystemConfigPanel.mail.transportSecurity=Transport security
 SystemConfigPanel.notification.redirectToFile=Redirect to file
+SystemConfigPanel.notification.redirectToFile.placeholder=Filename
 SystemConfigPanel.tooltip.duration=Format: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months
