updated report configuration (disabled wizard, only xml editor available now).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -507,3 +507,6 @@ operation.com.evolveum.midpoint.web.page.admin.users.PageOrgUnit.saveOrgUnit=Sav
 operation.com.evolveum.midpoint.web.page.admin.resources.content.PageContentAccounts.createUserFromAccount=Create user from account (Gui)
 operation.com.evolveum.midpoint.model.sync.SynchronizeAccountResultHandler.handle=Synchronize account result handler, handle (Model)
 operation.com.evolveum.midpoint.model.common.mapping.Mapping.evaluate=Mapping evaluate (Model)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.runReport=Run report (Gui)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReport.saveReport=Save report (Gui)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.loadReport=Load report (Gui)
