simple fix for MID-1749

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -510,3 +510,5 @@ operation.com.evolveum.midpoint.model.common.mapping.Mapping.evaluate=Mapping ev
 operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.runReport=Run report (Gui)
 operation.com.evolveum.midpoint.web.page.admin.reports.PageReport.saveReport=Save report (Gui)
 operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.loadReport=Load report (Gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.content.dto.AccountContentDataProvider.loadAccounts=Load accounts (Gui)
+operation.com.evolveum.midpoint.model.controller.ModelController.searchObjects=Search objects (Model)
