report configuration improvement.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -13,8 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-pageReport.title=Report configuration
-
-pageReport.tab.aceEditor=Xml
-pageReport.tab.panelConfig=Basic configuration
-pageReport.message.emptyXml=Can't save empty XML as report.
+page.title=Report configuration
